# openforge

./: .gitignore  AI_REPLICATION_GUIDE.md  DASHBOARD_METRICS_CHANGES.md  GITHUB_TOKEN_SETUP.md  PRD.md  README.md  VERCEL_DEPLOYMENT.md  package.json  vercel.json
backend/: .gitignore  README.md  env.example  main.py  package.json  pyproject.toml  requirements.txt  vercel.json
backend/api/: index.py
backend/app/: config.py  database.py
backend/app/auth/: authorization.py  clerk.py
backend/app/models/: contribution.py  github_cache.py  project.py  project_membership.py  project_star.py  repo_creation_metrics.py  user.py
backend/app/routers/: dashboard.py  marketplace.py  projects.py
backend/app/services/: github_service.py  time_tracker.py  xp_calculator.py
frontend/: CLERK_SETUP.md  README.md  env.example  middleware.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/components/dashboard/: contribution-activity-chart.tsx  create-repo-modal.tsx  dashboard-skeleton.tsx  project-card.tsx  project-list.tsx  stats-card.tsx  time-breakdown-chart.tsx  user-rank.tsx
frontend/components/editor/: github-embed.tsx
frontend/components/marketplace/: markdown-viewer.tsx  marketplace.tsx  repository-card-skeleton.tsx  repository-card.tsx  repository-detail-skeleton.tsx  repository-detail.tsx  repository-list-skeleton.tsx  repository-list.tsx  search-bar.tsx
frontend/components/ui/: input.tsx  textarea.tsx
frontend/lib/api/: dashboard.ts  marketplace.ts  projects.ts
(+2 files in other folders)
